//tracker.nci.nih.gov/browse/OCEPROJECT-3661 - fix spacing between date/contact row and body

--- a/CancerGov/_src/StyleSheets/_mainContent.scss
+++ b/CancerGov/_src/StyleSheets/_mainContent.scss
@@ -291,6 +291,9 @@ table.no-bullet-padding ul {
 	}
 }
 
+.press-release-date-contact.row.collapse {
+	margin-bottom: 1em;
+}
 
 
 @include bp(medium-down) {
